refactor: puzzle output through singular solve method