@@ -1,29 +1,29 @@
 package com.gotreaux.aoc.puzzles.year2015.day2;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
-public record Present(long length, long width, long height) {
+public record Present(int length, int width, int height) {
     public Present {
         if (length <= 0 || width <= 0 || height <= 0) {
             throw new IllegalArgumentException("Present dimensions must be greater than 0!");
         }
     }
 
-    public long getSurfaceArea() {
+    public int getSurfaceArea() {
         return (2 * length * width) + (2 * width * height) + (2 * height * length);
     }
 
-    public long getAreaOfSmallestSide() {
-        return Collections.min(Arrays.asList(length * width, width * height, height * length));
+    public int getAreaOfSmallestSide() {
+        return Collections.min(List.of(length * width, width * height, height * length));
     }
 
-    public long getSmallestPerimeter() {
+    public int getSmallestPerimeter() {
         return Collections.min(
-                Arrays.asList(2 * (length + width), 2 * (width + height), 2 * (height + length)));
+                List.of(2 * (length + width), 2 * (width + height), 2 * (height + length)));
     }
 
-    public long getVolume() {
+    public int getVolume() {
         return length * width * height;
     }
 }
